force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/pd_jp_20151124__ABM_ImportedLog__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC 利用状況</label>
    <nameField>
        <label>ABM_ImportedLog Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>