force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__BatchProcessingEndDt__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__BatchProcessingEndDt__c</fullName>
    <label>データ取得処理終了</label>
    <type>DateTime</type>
</CustomField>