force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__CreatedByID__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__CreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User imported data</description>
    <label>ユーザー</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Imported_Log</relationshipName>
    <type>Lookup</type>
</CustomField>