force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__ErrorDetail__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ErrorDetail__c</fullName>
    <label>エラー詳細</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>