force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ErrorMessage__c</fullName>
    <label>メッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>