force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__ExecutionState__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ExecutionState__c</fullName>
    <label>実行状態</label>
    <length>1</length>
    <type>Text</type>
</CustomField>