force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__ImportedDate__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__ImportedDate__c</fullName>
    <label>利用日時</label>
    <type>DateTime</type>
</CustomField>