force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__NumberOfRecords__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__NumberOfRecords__c</fullName>
    <label>企業情報取得数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>