force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__NumberOfVisitors__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__NumberOfVisitors__c</fullName>
    <label>Visitor数</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>