force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__PackageName__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__PackageName__c</fullName>
    <label>パッケージ名</label>
    <length>50</length>
    <type>Text</type>
</CustomField>