force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/fields/pd_jp_20151124__RangeEndDt__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__RangeEndDt__c</fullName>
    <label>取得範囲終了</label>
    <type>DateTime</type>
</CustomField>