force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/listViews/pd_jp_20151124__All.listView-meta.xml
<ListView>
    <fullName>pd_jp_20151124__All</fullName>
    <columns>NAME</columns>
    <columns>pd_jp_20151124__CreatedByID__c</columns>
    <columns>pd_jp_20151124__NumberOfVisitors__c</columns>
    <columns>pd_jp_20151124__NumberOfRecords__c</columns>
    <columns>pd_jp_20151124__ExecutionState__c</columns>
    <columns>pd_jp_20151124__UserName__c</columns>
    <columns>pd_jp_20151124__ImportedDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>