force-app/main/default/objects/pd_jp_20151124__ABM_ImportedLog__c/listViews/pd_jp_20151124__All1.listView-meta.xml
<ListView>
    <fullName>pd_jp_20151124__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>